api: add course's payment_recurrence and subscription's isPending
