# api/src/courses/dto/course.dto.ts
@@ -8,8 +8,9 @@ import {
   IsOptional,
   IsPositive,
   IsString,
+  Min,
 } from "class-validator";
-import { Course, CourseLevel } from "@prisma/client";
+import { Course, CourseLevel, PaymentRecurrence } from "@prisma/client";
 import { Exclude, Expose, Transform, Type } from "class-transformer";
 import { ApiHideProperty, ApiProperty } from "@nestjs/swagger";
 import { CourseOwnerDto } from "./course-owner.dto";
@@ -17,10 +18,7 @@ import { Decimal } from "@prisma/client/runtime/library";
 import { CourseCategoryDto } from "src/categories/dto/category.dto";
 
 export class CourseSessionDto {
-  @ApiProperty({
-    description: "The id of the session",
-    required: false,
-  })
+  @ApiProperty({ description: "The id of the session" })
   @IsString()
   @Expose()
   id: string;
@@ -77,11 +75,6 @@ export class CourseDto implements Course {
   @Expose()
   level: CourseLevel;
 
-  @ApiProperty({ description: "Indicates if the course is free" })
-  @IsBoolean()
-  @Expose()
-  is_free: boolean;
-
   @ApiProperty({
     description: "Price of the course",
     required: false,
@@ -89,16 +82,17 @@ export class CourseDto implements Course {
   })
   @Transform(({ value }) => value)
   @Type(() => Number)
-  @IsOptional()
-  @IsPositive()
+  @Min(0)
   @Expose()
-  price: Decimal | null;
+  price: Decimal;
 
-  @ApiProperty({ description: "Amount of payment required", required: false })
-  @IsNumber()
+  @ApiProperty({
+    description: "Payment recurrence",
+    enum: PaymentRecurrence,
+  })
+  @IsEnum(PaymentRecurrence)
   @Expose()
-  @IsOptional()
-  number_of_payments: number | null;
+  payment_recurrence: PaymentRecurrence;
 
   @ApiProperty({ description: "Indicates if the course is public" })
   @IsBoolean()
